--- a/css/style.scss
+++ b/css/style.scss
@@ -1785,6 +1785,7 @@ button:focus {
   line-height: 32px;
   text-transform: uppercase;
   color: $black;
+  width: 260px;
 }
 
 .post__graph-graph-nav {
