--- a/css/style.css
+++ b/css/style.css
@@ -1757,6 +1757,7 @@ button:focus {
   line-height: 32px;
   text-transform: uppercase;
   color: #453D2B;
+  width: 260px;
 }
 
 .post__graph-graph-nav {
