--- a/css/media.scss
+++ b/css/media.scss
@@ -1282,7 +1282,7 @@
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 670px) {
   .post__transfer-wrapper {
     flex-direction: column !important;
   }
@@ -1447,7 +1447,7 @@
   }
 
   .header__logo img {
-    width: 100px !important;
+    width: 85px !important;
   }
 
   .header__search-box {
@@ -1634,9 +1634,6 @@
 }
 
 @media (max-width: 360px) {
-  .header__logo img {
-    width: 85px !important;
-  }
 
   .post__graph-currency-country-kz,
   .post__graph-currency-country-ru,
@@ -1741,5 +1738,19 @@
 @media (max-height: 430px) {
   .sideMenu__burger-title {
     padding: 0px 16px 5px !important;
+  }
+}
+
+@media (max-height: 380px) {
+  .sideMenu__burger-nav {
+    border: none !important;
+  }
+
+  .sideMenu__burger-link {
+    font-size: 12px !important;
+  }
+
+  .sideMenu__burger-item__menu {
+    padding: 2px 0 !important;
   }
 }
