--- a/new/src/components/Header/Header.scss
+++ b/new/src/components/Header/Header.scss
@@ -103,7 +103,7 @@ $gray: #EEEFED;
   margin-left: 10px;
   font-weight: 700;
   font-size: 30px;
-  line-height: 38px;
+  line-height: 20px;
 
   &::after {
     content: "";
@@ -119,13 +119,19 @@ $gray: #EEEFED;
     top: 5px;
     right: -10px;
   }
+
+  active {
+    position: relative;
+
+    &::before {}
+  }
 }
 
 .lang-en {
-  display: none;
+  display: block;
   position: absolute;
   bottom: 0;
-  left: -10px;
+  left: 0;
   font-size: 16px;
   background-color: $second-accent;
   color: $black;
