Add footer section
Add footer section and 'media.scss'

--- a/new/src/components/Main/Main.scss
+++ b/new/src/components/Main/Main.scss
@@ -81,7 +81,7 @@ $gray: #EEEFED;
     display: block;
     height: 22px;
     width: 12px;
-    background-image: url(./img/ico/arrow2.svg);
+    background-image: url(../../ico/arrow2.svg);
     background-repeat: no-repeat;
     -webkit-background-size: contain;
     background-size: contain;
@@ -162,7 +162,7 @@ $gray: #EEEFED;
     display: block;
     width: 30px;
     height: 30px;
-    background-image: url(./img/ico/like.svg);
+    background-image: url(../../ico/like.svg);
     background-repeat: no-repeat;
     -webkit-background-size: contain;
     background-size: contain;
